<resources>
    <string name="app_name">KotlinWeather</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Kotlin Weather</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="country_name">Country Name</string>
    <string name="region">Region</string>

    <string name="name">Name</string>
    <string name="population">Population</string>
    <string name="date">Date</string>
    <string name="temp">Temp</string>
    <string name="pressure">Pressure</string>
    <string name="humidity">Humidity</string>
    <string name="capital">Capital</string>
    <string name="country_weather">Country Weather</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="toolbar_title">Country Weather</string>

</resources>
