<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="country" type="com.razan.weatherkotlin.model.Country"/>
        <variable
            name="countryCode" type="String" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.countries.details.CountryDetailsFragment"
        android:padding="16dp">

        <TextView
            android:id="@+id/name_label_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/name"
            android:textColor="@color/primary_text"
            android:textStyle="bold"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/name_value_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/name_label_tv"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@{country.name}"
            android:textSize="20sp"
            android:textColor="@color/secondary_text"
            android:layout_marginStart="16dp"/>

        <TextView
            android:id="@+id/region_label_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/name_label_tv"
            android:text="@string/region"
            android:textColor="@color/primary_text"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/region_value_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@{country.region}"
            android:textColor="@color/secondary_text"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/region_label_tv"
            app:layout_constraintStart_toEndOf="@id/region_label_tv"/>

        <TextView
            android:id="@+id/capital_label_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/region_label_tv"
            android:text="@string/capital"
            android:textColor="@color/primary_text"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/capital_value_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@{country.capital}"
            android:textColor="@color/secondary_text"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/capital_label_tv"
            app:layout_constraintStart_toEndOf="@id/capital_label_tv"/>

        <TextView
            android:id="@+id/population_label_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/capital_label_tv"
            android:text="@string/population"
            android:textColor="@color/primary_text"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/population_value_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@{String.valueOf(country.population)}"
            android:textColor="@color/secondary_text"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/population_label_tv"
            app:layout_constraintStart_toEndOf="@id/population_label_tv"/>

        <ImageView
            android:id="@+id/flag_iv"
            android:layout_width="100dp"
            android:layout_height="70dp"
            android:scaleType="fitCenter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp"
            app:imageUrl="@{countryCode}"
            tools:ignore="ContentDescription"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>