<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="forecastItem"
            type="com.razan.weatherkotlin.mappers.ForecastUIModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <TextView
            android:id="@+id/date_label_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:text="@string/date"
            android:textColor="@color/primary_text"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/date_value_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@{forecastItem.date}"
            android:textColor="@color/secondary_text"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/date_label_tv"
            app:layout_constraintStart_toEndOf="@id/date_label_tv" />

        <TextView
            android:id="@+id/temp_label_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:text="@string/temp"
            android:textColor="@color/primary_text"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/date_label_tv" />

        <TextView
            android:id="@+id/temp_value_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@{String.valueOf(forecastItem.tempHigh) + 'º' + ' ' + '-' + ' ' + String.valueOf(forecastItem.tempLow) + 'º'}"
            android:textColor="@color/secondary_text"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/temp_label_tv"
            app:layout_constraintStart_toEndOf="@id/temp_label_tv" />

        <TextView
            android:id="@+id/pressure_label_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:text="@string/pressure"
            android:textColor="@color/primary_text"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/temp_label_tv" />

        <TextView
            android:id="@+id/pressure_value_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@{String.valueOf(forecastItem.pressure)}"
            android:textColor="@color/secondary_text"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/pressure_label_tv"
            app:layout_constraintStart_toEndOf="@id/pressure_label_tv" />

        <TextView
            android:id="@+id/humidity_label_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:text="@string/humidity"
            android:textColor="@color/primary_text"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/pressure_label_tv" />

        <TextView
            android:id="@+id/humidity_value_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@{String.valueOf(forecastItem.humidity)}"
            android:textColor="@color/secondary_text"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/humidity_label_tv"
            app:layout_constraintStart_toEndOf="@id/humidity_label_tv" />

        <ImageView
            android:id="@+id/weather_icon_iv"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_margin="16dp"
            android:layout_marginStart="8dp"
            android:scaleType="fitCenter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/pressure_value_tv"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>